tests/baselines/reference/project/rootDirectoryWithSourceRoot/amd/rootDirectoryWithSourceRoot.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
FolderA/FolderB/fileB.ts(3,12): error TS2564: Property 'c' has no initializer and is not definitely assigned in the constructor.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
!!! error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== FolderA/FolderB/FolderC/fileC.ts (0 errors) ====
    class C {
    }
    
==== FolderA/FolderB/fileB.ts (1 errors) ====
    /// <reference path='FolderC/fileC.ts'/>
    class B {
        public c: C;
               ~
!!! error TS2564: Property 'c' has no initializer and is not definitely assigned in the constructor.
    }
    